--- a/BitsandPizzas/app/src/main/res/menu/menu_order.xml
+++ b/BitsandPizzas/app/src/main/res/menu/menu_order.xml
@@ -8,12 +8,12 @@
         android:icon="@drawable/ic_action_new_event"
         android:orderInCategory="1"
         android:title="@string/action_create_order"
-        app:showAsAction="ifRoom" />
+        android:showAsAction="ifRoom" />
 
 
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:showAsAction="never" />
 </menu>
